--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,124 @@
 @tailwind components;
 @tailwind utilities;
 
+@media (max-width: 1199.98px) {
+    .checkout-form {
+      flex-direction: column;
+    }
+  
+    .checkout__payment-methods {
+      width: 100%;
+    }
+  
+    .checkout__totals {
+      width: 100%;
+    }
+  }
+  
+  .checkout-form {
+    display: flex;
+    gap: 3.625rem;
+  }
+  
+  .checkout-form .billing-info__wrapper {
+    padding-top: 3.125rem;
+    flex-grow: 1;
+  }
+  
+  .checkout-form .billing-info__wrapper .form-floating > label,
+  .checkout-form .billing-info__wrapper .form-label-fixed > .form-label {
+    color: #6c757d; /* Replaced $secondary */
+  }
+  
+  .checkout-form .checkout__totals-wrapper .sticky-content {
+    padding-top: 3.125rem;
+  }
+  
+  .checkout-form .checkout__totals-wrapper .btn-checkout {
+    width: 100%;
+    height: 3.75rem;
+    font-size: 0.875rem;
+  }
+  
+  .checkout-form .checkout__payment-methods {
+    border: 1px solid #ced4da; /* Replaced $border-color */
+    margin-bottom: 1.25rem;
+    padding: 2.5rem 2.5rem 1.5rem;
+    width: 26.25rem;
+  }
+  
+  .checkout-form .checkout__payment-methods label {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+  
+  .checkout-form .checkout__payment-methods label .option-detail {
+    font-size: 0.875rem;
+    margin: 0.625rem 0 0;
+    display: none;
+  }
+  
+  .checkout-form .checkout__payment-methods .form-check-input:checked ~ label .option-detail {
+    display: block;
+  }
+  
+  .checkout-form .checkout__payment-methods .policy-text {
+    font-size: 0.75rem;
+    line-height: 1.5rem;
+  }
+  
+  .checkout-form .checkout__payment-methods .policy-text > a {
+    color: #dc3545; /* Replaced $color-red-800 */
+  }
+  
+  .checkout__totals {
+    border: 1px solid #222;
+    margin-bottom: 1.25rem;
+    padding: 2.5rem 2.5rem 0.5rem;
+    width: 26.25rem;
+  }
+  
+  .checkout__totals > h3 {
+    font-size: 1rem;
+    text-transform: uppercase;
+    margin-bottom: 1.25rem;
+  }
+  
+  .checkout__totals table {
+    width: 100%;
+  }
+  
+  .checkout__totals .checkout-cart-items thead th {
+    border-bottom: 1px solid #e4e4e4;
+    padding: 0.875rem 0;
+    font-size: 0.875rem;
+    font-weight: 500;
+  }
+  
+  .checkout__totals .checkout-cart-items tbody td {
+    padding: 0.40625rem 0;
+    color: #6c757d; /* Replaced $secondary */
+  }
+  
+  .checkout__totals .checkout-cart-items tbody tr:first-child td {
+    padding-top: 0.8125rem;
+  }
+  
+  .checkout__totals .checkout-cart-items tbody tr:last-child td {
+    padding-bottom: 0.8125rem;
+    border-bottom: 1px solid #ced4da; /* Replaced $border-color */
+  }
+  
+  .checkout__totals .checkout-totals th,
+  .checkout__totals .checkout-totals td {
+    border-bottom: 1px solid #ced4da; /* Replaced $border-color */
+    padding: 0.875rem 0;
+    font-size: 0.875rem;
+    font-weight: 500;
+  }
+  
+  .checkout__totals .checkout-totals tr:last-child th,
+  .checkout__totals .checkout-totals tr:last-child td {
+    border-bottom: 0;
+  }
+  
